Bug tracker at http://code.google.com/p/py-sendfile/issues/list

Version 2.0.0 - XXXX-XX-XX
==========================

(Giampaolo Rodolà took over maintenance)

#1: test suite
#2: python 3 support
#3: FreeBSD implementation is broken
#4: python large file support
#5: headers/trailers are now keyword arguments
#6: exposed SF_NODISKIO, SF_MNOWAIT and SF_SYNC constants on FreeBSD
#8: benchmark script
#10: OSX support

Version 1.2.4 - 2009-03-06
==========================

Last release, maintained by Stephan Peijnik.
Support for AIX, FreeBSD, Dragonfly BSD, OSX Linux.